--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <span class="hamburger-icon"></span>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="true">Register Here</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false">Register Here</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <span class="close-icon"></span>
                     </button>
@@ -288,7 +288,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-primary" href="https://mobirise.com/mobirise-free-win.zip"> रजिस्ट्रेशन करण्यासाठी येथे क्लिक करा</a> <a class="btn btn-black btn-black-outline" href="tel:+91-973-049-6531">अधिक माहितीसाठी फोन करा </a></div>
+                <div class="text-xs-center"><a class="btn btn-primary" href="https://imojo.in/sciencetoys" target="_blank"> रजिस्ट्रेशन करण्यासाठी येथे क्लिक करा</a> <a class="btn btn-black btn-black-outline" href="tel:+91-973-049-6531">अधिक माहितीसाठी फोन करा </a></div>
             </div>
         </div>
     </div>
@@ -338,7 +338,7 @@
 
                   <form action="https://mobirise.com/" method="post" data-form-title="UNTITLED FORM">
 
-                      <input type="hidden" value="5wYsRSaeGJLfvHXnvPivSbfuZnYv3XC66Gkx100cjTUyBL4TnmFh6qFIj2voKiDPVf++wANPxo6f6/KrL9T0dX3Sb806u81xh5yqbp/QPNEYTjg8CAuHP+oOUyenifLx" data-form-email="true">
+                      <input type="hidden" value="FRMdQ7iD9lBh7w8N4u5TK/aB8mYpj/lAdw13fk8sQ+sOOXUHbKENLB1X6gqeHIgMVACMTqbc6IRIs/q5WNRCRUAeZr/JO7Wqyz2Cv3tJpxjLkwYAQfuWr3q4nYJ94g8U" data-form-email="true">
 
                       <div class="row row-sm-offset">
 
@@ -545,7 +545,7 @@
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/57579899-467625237325121-4221684352087490560-n-960x720.jpg">
                         </div><div class="carousel-item">
-                            <img alt="" src="assets/images/57395854-2078391098946332-3088113075308462080-n-960x7201.jpg">
+                            <img alt="" src="assets/images/57395854-2078391098946332-3088113075308462080-n-960x7202.jpg">
                         </div>
                     </div>
                     <a class="left carousel-control" role="button" data-slide="prev" href="#lb-gallery1-g"><img src="assets/images/arrowleft.png"></a>
@@ -566,7 +566,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-primary" href="https://mobirise.com/mobirise-free-win.zip">रजिस्ट्रेशन करण्यासाठी येथे क्लिक करा</a> <a class="btn btn-black btn-black-outline" href="tel:+91-973-049-6531">अधिक माहितीसाठी फोन करा</a></div>
+                <div class="text-xs-center"><a class="btn btn-primary" href="https://imojo.in/sciencetoys" target="_blank">रजिस्ट्रेशन करण्यासाठी येथे क्लिक करा</a> <a class="btn btn-black btn-black-outline" href="tel:+91-973-049-6531">अधिक माहितीसाठी फोन करा</a></div>
             </div>
         </div>
     </div>
