create github pages

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/netbhet-logo240-128x128.png" alt="Mobirise"></a>
-                        <a class="navbar-caption" href="https://mobirise.com">NETBHET E-LEARNING SOLUTIONS</a>
+                        <a href="https://imojo.in/sciencetoys" class="navbar-logo"><img src="assets/images/netbhet-logo240-128x128.png" alt="Mobirise"></a>
+                        <a class="navbar-caption" href="https://imojo.in/sciencetoys">NETBHET E-LEARNING SOLUTIONS</a>
                     </div>
 
                 </div>
@@ -50,7 +50,7 @@
                         <span class="hamburger-icon"></span>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false">Register Here</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="https://imojo.in/sciencetoys" aria-expanded="false" target="_blank">Register Here</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <span class="close-icon"></span>
                     </button>
@@ -338,7 +338,7 @@
 
                   <form action="https://mobirise.com/" method="post" data-form-title="UNTITLED FORM">
 
-                      <input type="hidden" value="FRMdQ7iD9lBh7w8N4u5TK/aB8mYpj/lAdw13fk8sQ+sOOXUHbKENLB1X6gqeHIgMVACMTqbc6IRIs/q5WNRCRUAeZr/JO7Wqyz2Cv3tJpxjLkwYAQfuWr3q4nYJ94g8U" data-form-email="true">
+                      <input type="hidden" value="mVTiT8iAyRCLfOq7RBHSlsgSb6dFyvFePHd5UuRAEJLW5IceMrdqaADFgxya3U6cssMBO9ej4PTUhAySifIgf8cJKriCzUujwrDFrWG26EtleWluXMPUlLuEehgzC3vC" data-form-email="true">
 
                       <div class="row row-sm-offset">
 
@@ -545,7 +545,7 @@
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/57579899-467625237325121-4221684352087490560-n-960x720.jpg">
                         </div><div class="carousel-item">
-                            <img alt="" src="assets/images/57395854-2078391098946332-3088113075308462080-n-960x7202.jpg">
+                            <img alt="" src="assets/images/57395854-2078391098946332-3088113075308462080-n-960x7204.jpg">
                         </div>
                     </div>
                     <a class="left carousel-control" role="button" data-slide="prev" href="#lb-gallery1-g"><img src="assets/images/arrowleft.png"></a>
